The object multiply system has been reworked