@@ -1,16 +1,12 @@
 package com.example.food_basket_optimization.extraction.properties.source.sourcehttp;
 
 import com.example.food_basket_optimization.extraction.ExtractedEntity;
-import com.example.food_basket_optimization.extraction.ReferencedExtraction;
-import com.example.food_basket_optimization.extraction.properties.multi.PropertyBuilder;
-import com.example.food_basket_optimization.extraction.properties.source.HttpExtractionSource;
+import com.example.food_basket_optimization.extraction.properties.base.simple.SourceHttpProperty;
+import com.example.food_basket_optimization.extraction.properties.propertyconstructor.constructableobject.ConstructableRootObject;
 import com.example.food_basket_optimization.extraction.properties.source.ResolvableSource;
-import com.example.food_basket_optimization.extraction.properties.util.MultiplyingProperty;
-import com.example.food_basket_optimization.extraction.properties.util.PostMultiplyingProperty;
 
-import java.util.ArrayList;
-import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * The object is responsible for propagating the properties of the http request,
@@ -18,31 +14,27 @@ import java.util.List;
  * based on numerical patterns.
  */
 public class ResolvableSourceHttpProperties implements ResolvableSource<HttpExtractionSource> {
-    private final List<MultiplyingProperty<?>> multiParams;
-    private final List<PostMultiplyingProperty<?>> postMultiParams;
 
-    public ResolvableSourceHttpProperties(List<MultiplyingProperty<?>> multiParams,
-                                          List<PostMultiplyingProperty<?>> postMultiParams) {
-        this.multiParams = multiParams;
-        this.postMultiParams = postMultiParams;
+    private final ConstructableRootObject<SourceHttpProperty> constructableSource;
 
+    public ResolvableSourceHttpProperties(ConstructableRootObject<SourceHttpProperty> constructableSource) {
+
+        this.constructableSource = constructableSource;
 
     }
 
 
     @Override
     public List<HttpExtractionSource> resolve() {
-        PropertyBuilder<SourceHttpProperty> sourceHttpPropertyBuilder = new PropertyBuilder<>(multiParams, postMultiParams, SourceHttpProperty.class);
-        List<SourceHttpProperty> sources = sourceHttpPropertyBuilder.build();
-        return sources.stream().map(source -> new HttpExtractionSource(source.property(), source.getReferenceEntities())).toList();
-
+        List<SourceHttpProperty> constructedSources = constructableSource.construct();
+        return constructedSources.stream()
+                .map(source -> new HttpExtractionSource(source.property(), source.getReferenceEntities()))
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<Class<? extends ExtractedEntity>> getRefClasses() {
-        ArrayList<Class<? extends ExtractedEntity>> result = new ArrayList<>(multiParams.stream().map(ReferencedExtraction::getRefClasses).flatMap(Collection::stream).toList());
-        result.addAll(postMultiParams.stream().map(ReferencedExtraction::getRefClasses).flatMap(Collection::stream).toList());
-        return result;
+        return constructableSource.getRefClasses();
 
     }
 }
